# todo_app_docker_compose

./: compose.yaml
todo_app/: Dockerfile  pyproject.toml
todo_app/todo_app/: main.py  settings.py
